--- a/Auth/Auth.Repo/Auth.Repo.csproj
+++ b/Auth/Auth.Repo/Auth.Repo.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Auth.Domain\Auth.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
