--- a/Carnets/Carnets.Repo/Carnets.Repo.csproj
+++ b/Carnets/Carnets.Repo/Carnets.Repo.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Carnets.Domain\Carnets.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
