--- a/ApiGateway/ApiGateway.API/appsettings.Full.json
+++ b/ApiGateway/ApiGateway.API/appsettings.Full.json
@@ -25,6 +25,26 @@
           "Url": "http://carnets/swagger/v1/swagger.json"
         }
       ]
+    },
+    {
+      "key": "groups",
+      "Config": [
+        {
+          "Name": "Groups API",
+          "Version": "v1",
+          "Url": "http://groups/swagger/v1/swagger.json"
+        }
+      ]
+    },
+    {
+      "key": "content",
+      "Config": [
+        {
+          "Name": "Content API",
+          "Version": "v1",
+          "Url": "http://content/swagger/v1/swagger.json"
+        }
+      ]
     }
   ],
   "AllowedHosts": "*"
