--- a/Carnets/Carnets.API/appsettings.Development.json
+++ b/Carnets/Carnets.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=Carnets;User Id=postgres;Password=Pa55w0rd;"
   }
 }
