--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -8,6 +8,8 @@ services:
     restart: always
     environment:
       - POSTGRES_PASSWORD=Pa55w0rd
+    ports:
+      - "5432:5432"
 
   dbgroups:
     image: postgres:14.5
@@ -27,33 +29,34 @@ services:
     environment:
       - POSTGRES_PASSWORD=Pa55w0rd
 
-  auth:
-    build: 
-      context: .
-      dockerfile: ./Auth/Auth.API/Dockerfile
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    depends_on:
-      - dbauth
+  # auth:
+  #   build: 
+  #     context: .
+  #     dockerfile: ./Auth/Auth.API/Dockerfile
+  #   environment:
+  #     - ASPNETCORE_ENVIRONMENT=Development
+  #     - ConnectionStrings:DefaultConnection=Server=dbauth;Port=5432;Database=Carnets;User Id=postgres;Password=Pa55w0rd;
+  #   depends_on:
+  #     - dbauth
 
-  carnets:
-    build: 
-      context: .
-      dockerfile: ./Carnets/Carnets.API/Dockerfile
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    depends_on:
-      - dbcarnets
+  # carnets:
+  #   build: 
+  #     context: .
+  #     dockerfile: ./Carnets/Carnets.API/Dockerfile
+  #   environment:
+  #     - ASPNETCORE_ENVIRONMENT=Development
+  #   depends_on:
+  #     - dbcarnets
 
-  apigateway:
-    build: 
-      context: .
-      dockerfile: ./ApiGateway/ApiGateway.API/Dockerfile
-    environment:
-      - ASPNETCORE_URLS=http://+;https://+
-    ports:
-      - "8080:80"
-      - "8082:443"
-    depends_on:
-      - auth
-      - carnets
+  # apigateway:
+  #   build: 
+  #     context: .
+  #     dockerfile: ./ApiGateway/ApiGateway.API/Dockerfile
+  #   environment:
+  #     - ASPNETCORE_URLS=http://+;https://+
+  #   ports:
+  #     - "8080:80"
+  #     - "8082:443"
+  #   depends_on:
+  #     - auth
+  #     - carnets
