add fitnessClubs to ocelot

--- a/ApiGateway/ApiGateway.API/appsettings.json
+++ b/ApiGateway/ApiGateway.API/appsettings.json
@@ -25,6 +25,16 @@
           "Url": "http://carnets/swagger/v1/swagger.json"
         }
       ]
+    },
+    {
+      "key": "fitnessclubs",
+      "Config": [
+        {
+          "Name": "FitnessClubs API",
+          "Version": "v1",
+          "Url": "http://fitnessclubs/swagger/v1/swagger.json"
+        }
+      ]
     }
   ],
   "AllowedHosts": "*"
