add common project

--- a/Carnets/Carnets.API/Carnets.API.csproj
+++ b/Carnets/Carnets.API/Carnets.API.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common\Common.csproj" />
     <ProjectReference Include="..\Carnets.Repo\Carnets.Repo.csproj" />
   </ItemGroup>
 
