--- a/Carnets/Carnets.API/Dockerfile
+++ b/Carnets/Carnets.API/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR /src
 COPY ["Carnets/Carnets.API/Carnets.API.csproj", "Carnets/Carnets.API/"]
 COPY ["Carnets/Carnets.Repo/Carnets.Repo.csproj", "Carnets/Carnets.Repo/"]
 COPY ["Carnets/Carnets.Domain/Carnets.Domain.csproj", "Carnets/Carnets.Domain/"]
+COPY ["Common/Common/Common.csproj", "Common/Common/"]
 RUN dotnet restore "Carnets/Carnets.API/Carnets.API.csproj"
 COPY . .
 WORKDIR "/src/Carnets/Carnets.API"
