--- a/FitnessClubs/FitnessClubs.API/FitnessClubs.API.csproj
+++ b/FitnessClubs/FitnessClubs.API/FitnessClubs.API.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common\Common.csproj" />
     <ProjectReference Include="..\FitnessClubs.Repo\FitnessClubs.Repo.csproj" />
   </ItemGroup>
 
