use common in auth

--- a/Auth/Auth.API/Dockerfile
+++ b/Auth/Auth.API/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR /src
 COPY ["Auth/Auth.API/Auth.API.csproj", "Auth/Auth.API/"]
 COPY ["Auth/Auth.Repo/Auth.Repo.csproj", "Auth/Auth.Repo/"]
 COPY ["Auth/Auth.Domain/Auth.Domain.csproj", "Auth/Auth.Domain/"]
+COPY ["Common/Common/Common.csproj", "Common/Common/"]
 RUN dotnet restore "Auth/Auth.API/Auth.API.csproj"
 COPY . .
 WORKDIR "/src/Auth/Auth.API"
