--- a/Auth/Auth.API/Auth.API.csproj
+++ b/Auth/Auth.API/Auth.API.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common\Common.csproj" />
     <ProjectReference Include="..\Auth.Repo\Auth.Repo.csproj" />
   </ItemGroup>
 
