remove unused endpoints

--- a/FitnessClubs/FitnessClubs.API/FitnessClubs.API.csproj
+++ b/FitnessClubs/FitnessClubs.API/FitnessClubs.API.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\FitnessClubs.Repo\FitnessClubs.Repo.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
