--- a/Carnets/Carnets.API/Carnets.API.csproj
+++ b/Carnets/Carnets.API/Carnets.API.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\Carnets.Repo\Carnets.Repo.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
