Test commit after mr

--- a/.gitignore
+++ b/.gitignore
@@ -363,7 +363,7 @@ FodyWeavers.xsd
 
 # ----------------------------------------------------------------------------------------------------------------------
 
-*.gradle
+.gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
