--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -27,6 +27,8 @@ services:
       context: .
       dockerfile: ./Carnets/Carnets.API/Dockerfile
     restart: always
+    ports:
+      - "9001:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings:DefaultConnection=Server=postgres;Port=5432;Database=Carnets;User Id=postgres;Password=Pa55w0rd;
