--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -44,6 +44,36 @@ services:
     depends_on:
       - postgres
 
+  content:
+    build:
+      context: ./Content/
+      dockerfile: Dockerfile
+    restart: always
+    environment:
+      - ConnectionStrings:DefaultConnection=Server=postgres;Port=5432;Database=FitnessClubs;User Id=postgres;Password=Pa55w0rd;
+    depends_on:
+      - postgres
+
+  groups:
+    build:
+      context: ./Groups/
+      dockerfile: Dockerfile
+    restart: always
+    environment:
+      - ConnectionStrings:DefaultConnection=Server=postgres;Port=5432;Database=FitnessClubs;User Id=postgres;Password=Pa55w0rd;
+    depends_on:
+      - postgres
+
+  notifications:
+    build:
+      context: ./Notifications/
+      dockerfile: Dockerfile
+    restart: always
+    environment:
+      - ConnectionStrings:DefaultConnection=Server=postgres;Port=5432;Database=FitnessClubs;User Id=postgres;Password=Pa55w0rd;
+    depends_on:
+      - postgres
+
   apigateway:
     build: 
       context: .
@@ -58,3 +88,6 @@ services:
       - auth
       - carnets
       - fitnessclubs
+      - content
+      - groups
+      - notifications
