Validate gympass endpoints with worker's fitness club (#10)
* fitnessClub Controller skeleton

* fitness club base endpoints logic

* carnets fitnessClubs communication skeleton

* enable worker employee creation

* establish connection

* serve httpCodes

* retrieve host information from config

* validate gympasstype endpoints with worker's fitnessClub

* add fitnessClubId to Permissions

* permissions workerId validation

* secure permission endpoints

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -32,6 +32,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings:DefaultConnection=Server=postgres;Port=5432;Database=Carnets;User Id=postgres;Password=Pa55w0rd;
+      - Api:FitnessClubHost=http://fitnessclubs/
     depends_on:
       - postgres
 
@@ -40,6 +41,8 @@ services:
       context: .
       dockerfile: ./FitnessClubs/FitnessClubs.API/Dockerfile
     restart: always
+    ports:
+      - "9999:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings:DefaultConnection=Server=postgres;Port=5432;Database=FitnessClubs;User Id=postgres;Password=Pa55w0rd;
