--- a/Carnets/Carnets.API/appsettings.Development.json
+++ b/Carnets/Carnets.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=Carnets;User Id=postgres;Password=Pa55w0rd;"
+  },
+  "Api": {
+    "FitnessClubHost": "http://localhost:9999/"
   }
 }
