add services to config

--- a/ApiGateway/ApiGateway.API/appsettings.json
+++ b/ApiGateway/ApiGateway.API/appsettings.json
@@ -35,6 +35,36 @@
           "Url": "http://fitnessclubs/swagger/v1/swagger.json"
         }
       ]
+    },
+    {
+      "key": "content",
+      "Config": [
+        {
+          "Name": "Content API",
+          "Version": "v1",
+          "Url": "http://content/swagger/v1/swagger.json"
+        }
+      ]
+    },
+    {
+      "key": "groups",
+      "Config": [
+        {
+          "Name": "Groups API",
+          "Version": "v1",
+          "Url": "http://groups/swagger/v1/swagger.json"
+        }
+      ]
+    },
+    {
+      "key": "notifications",
+      "Config": [
+        {
+          "Name": "Notifications API",
+          "Version": "v1",
+          "Url": "http://notifications/swagger/v1/swagger.json"
+        }
+      ]
     }
   ],
   "AllowedHosts": "*"
