--- a/Notifications/build.gradle
+++ b/Notifications/build.gradle
@@ -13,11 +13,15 @@ repositories {
 }
 
 dependencies {
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-quartz'
+	// core
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	//runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//runtimeOnly 'org.postgresql:postgresql'
+
+	// additional
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
+	//implementation 'org.springframework.boot:spring-boot-starter-quartz'
 }
 
 tasks.named('test') {
