fix swagger ports

--- a/ApiGateway/ApiGateway.API/appsettings.json
+++ b/ApiGateway/ApiGateway.API/appsettings.json
@@ -42,7 +42,7 @@
         {
           "Name": "Content API",
           "Version": "v3",
-          "Url": "http://content/v3/api-docs/swagger.json"
+          "Url": "http://content:8080/v3/api-docs/swagger.json"
         }
       ]
     },
@@ -52,7 +52,7 @@
         {
           "Name": "Groups API",
           "Version": "v1",
-          "Url": "http://groups/swagger/v1/swagger.json"
+          "Url": "http://groups:8080/v3/api-docs/swagger.json"
         }
       ]
     },
@@ -62,7 +62,7 @@
         {
           "Name": "Notifications API",
           "Version": "v1",
-          "Url": "http://notifications/swagger/v1/swagger.json"
+          "Url": "http://notifications:8080/v3/api-docs/swagger.json"
         }
       ]
     }
