--- a/Groups/build.gradle
+++ b/Groups/build.gradle
@@ -16,8 +16,8 @@ dependencies {
 	// core
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'org.postgresql:postgresql'
 
 	// additional
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
