Change datasource.url to needed port

--- a/Groups/src/main/resources/application.properties
+++ b/Groups/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.show-sql=true
 spring.jpa.show-sql=true
 
 # TODO change default database to service relevant
-spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.url=jdbc:postgresql://${DATASOURCE_PORT:localhost:5432}/postgres
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${DATASOURCE_PASSWORD:Pa55w0rd}
