--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -55,7 +55,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      - DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
+      - DATASOURCE_PORT=db:5432
       - DATASOURCE_USERNAME=postgres
       - DATASOURCE_PASSWORD=Pa55w0rd
     depends_on:
@@ -67,7 +67,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      - DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
+      - DATASOURCE_PORT=db:5432
       - DATASOURCE_USERNAME=postgres
       - DATASOURCE_PASSWORD=Pa55w0rd
     depends_on:
@@ -79,7 +79,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      - DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
+      - DATASOURCE_PORT=db:5432
       - DATASOURCE_USERNAME=postgres
       - DATASOURCE_PASSWORD=Pa55w0rd
     depends_on:
