Change postgres volume location and init databases for java services

--- a/Groups/src/main/resources/application.properties
+++ b/Groups/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.show-sql=true
 spring.jpa.show-sql=true
 
-# TODO change default database to service relevant
-spring.datasource.url=jdbc:postgresql://${DATASOURCE_PORT:localhost:5432}/postgres
+spring.datasource.url=jdbc:postgresql://${DATASOURCE_PORT:localhost:5432}/Groups
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${DATASOURCE_PASSWORD:Pa55w0rd}
