--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -10,6 +10,8 @@ services:
       - POSTGRES_PASSWORD=Pa55w0rd
     ports:
       - "5432:5432"
+    volumes:
+      - .Database/postgres_init.sql:/docker-entrypoint-initdb.d/postgres_init.sql
 
   auth:
     build: 
