Endpoint description and disable nullable lint warnings (#19)
* add endpoint description file

* add roles info

* account routes description

* adjust routes after merge dev

* carnets roles added

* sort endpoints

* fill description

* diable nullable lint warnings

* fix lint warnings

--- a/ApiGateway/ApiGateway.API/ApiGateway.API.csproj
+++ b/ApiGateway/ApiGateway.API/ApiGateway.API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>7815b4e1-a88a-4fd1-a83d-60ee70baf885</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
