--- a/FitnessClubs/FitnessClubs.API/FitnessClubs.API.csproj
+++ b/FitnessClubs/FitnessClubs.API/FitnessClubs.API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>0d72017f-0719-42c2-b3cd-691e1ed433d7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
