--- a/Auth/Auth.API/Auth.API.csproj
+++ b/Auth/Auth.API/Auth.API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>c7b0198f-51db-438a-9277-0dcb21048726</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
