Change default changelog file

--- a/Content/src/main/resources/application.properties
+++ b/Content/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://${DATASOURCE_PORT:localhost:5432}/Content
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${DATASOURCE_PASSWORD:Pa55w0rd}
+
+spring.liquibase.change-log=databaseChangeLog.xml
