[Carnets] Fix FitnessClubs dependency (#21)
* kebeb case route

* port-independent settings

--- a/Carnets/Carnets.API/appsettings.Development.json
+++ b/Carnets/Carnets.API/appsettings.Development.json
@@ -9,6 +9,6 @@
     "DefaultConnection": "Server=localhost;Port=5432;Database=Carnets;User Id=postgres;Password=Pa55w0rd;"
   },
   "Api": {
-    "FitnessClubHost": "http://localhost:9999/"
+    "FitnessClubHost": "http://localhost:8080/api/fitness-clubs/"
   }
 }
