Group entity and repository

--- a/Groups/src/main/resources/application.properties
+++ b/Groups/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.username=${DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${DATASOURCE_PASSWORD:Pa55w0rd}
 
 spring.liquibase.change-log=databaseChangeLog.xml
+
+entitymanager.packagesToScan=groups
