Build and push docker images on master push action (#34)
* add auth delpoyment

* add test deply trigger

* remove tag label

* update context

* update dockerfile path

* temporary enable for branches

* add dotnet services actions

* add content build action

* update content dockerfile path

* update Content context

* test root context

* update Content Dockerfile

* add groups and notifications actions

* add missing dockerfile copy folder

* remove action trigger

* update docker-compose

* update docker compose build

* update comment

--- a/Content/Dockerfile
+++ b/Content/Dockerfile
@@ -1,19 +1,19 @@
-# build with: docker build -t ghcr.io/muscle-up-app/content:muscleUpDev -f Dockerfile .
+# build with: docker build -t ghcr.io/muscle-up-app/content:muscleUpDev -f Content/Dockerfile .
 # push with: docker push ghcr.io/muscle-up-app/content:muscleUpDev
 
 FROM gradle:7.5-jdk17-jammy AS TEMP_BUILD_IMAGE
 ENV APP_HOME=/app/
 WORKDIR $APP_HOME
 
-COPY settings.gradle $APP_HOME
-COPY gradle $APP_HOME/gradle
+COPY Content/settings.gradle $APP_HOME
+COPY Content/gradle $APP_HOME/gradle
 COPY --chown=gradle:gradle . /home/gradle/src
 
 USER root
 RUN chown -R gradle /home/gradle/src
 RUN gradle build || return 0
 
-COPY . .
+COPY ./Content .
 RUN gradle clean build
 
 # actual container
