Fitness Clubs - clean architecture (#37)
* move elements

* fix auto mapper

* setup mediatR

* change fitness club service to CQRS

* switch to CQRS

--- a/FitnessClubs/FitnessClubs.Repo/FitnessClubs.Repo.csproj
+++ b/FitnessClubs/FitnessClubs.Repo/FitnessClubs.Repo.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FitnessClubs.Application\FitnessClubs.Application.csproj" />
     <ProjectReference Include="..\FitnessClubs.Domain\FitnessClubs.Domain.csproj" />
   </ItemGroup>
 
