Jwt secret key from config (#36)
* use settings to store secret key

* add env file

--- a/Carnets/Carnets.API/appsettings.Development.json
+++ b/Carnets/Carnets.API/appsettings.Development.json
@@ -10,5 +10,6 @@
   },
   "Api": {
     "FitnessClubHost": "http://localhost:8080/api/fitness-clubs/"
-  }
+  },
+  "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e"
 }
