--- a/FitnessClubs/FitnessClubs.API/appsettings.Development.json
+++ b/FitnessClubs/FitnessClubs.API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=FitnessClubs;User Id=postgres;Password=Pa55w0rd;"
-  }
+  },
+  "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e"
 }
