--- a/Auth/Auth.API/appsettings.Development.json
+++ b/Auth/Auth.API/appsettings.Development.json
@@ -8,5 +8,6 @@
   "Jwt": {
     "AccessExpirationMinutes": "30",
     "RefreshExpirationMinutes": "1440"
-  }
+  },
+  "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e"
 }
