Fix/mk liquibase (#39)
* Poprawa liquibase

* fixed 100% :)

--- a/Notifications/build.gradle
+++ b/Notifications/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 
 	// additional
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11' // swagger
-	implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.9.1' // liquibase
+	implementation 'org.liquibase:liquibase-core:4.16.1' // liquibase
 	//implementation 'org.springframework.boot:spring-boot-starter-quartz'
 }
 
