--- a/Groups/build.gradle
+++ b/Groups/build.gradle
@@ -17,7 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// databases
 	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'com.h2database:h2:2.1.214'
 
 	// additional
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11' // swagger
