Auth clean architecture (#42)
* create application project

* restore docker-compose port

* move application classes

* member queries + commands

* add missing services registration

* trainer queries and commands

* move dtoos

* worker command and queries

* fix dependencies

* fix update worker

* add dotnet docker compose

* disable nullable

Co-authored-by: Mikołaj Macioszczyk <macioszczyk@vialutions.com>

--- a/Auth/Auth.Repo/Auth.Repo.csproj
+++ b/Auth/Auth.Repo/Auth.Repo.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Auth.Application\Auth.Application.csproj" />
     <ProjectReference Include="..\Auth.Domain\Auth.Domain.csproj" />
   </ItemGroup>
 
