--- a/Carnets/Carnets.Domain/Carnets.Domain.csproj
+++ b/Carnets/Carnets.Domain/Carnets.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Stripe.net" Version="40.13.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Common\Common\Common.csproj" />
   </ItemGroup>
 
