Add initial data, description, database schema initialization, change database column names

--- a/Groups/src/main/resources/application.properties
+++ b/Groups/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=none
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DATASOURCE_PORT:localhost:5432}/Groups
