Get all Workers and Trainers data from FitnessClub (#58)
* move dtos to common

* AuthHttpService

* update connection

* implement AuthHttpService

* fix dependencies

* sitch to newtonsoft.json

* fix no employes

Co-authored-by: Mikołaj Macioszczyk <macioszczyk@vialutions.com>

--- a/FitnessClubs/FitnessClubs.API/appsettings.Development.json
+++ b/FitnessClubs/FitnessClubs.API/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=FitnessClubs;User Id=postgres;Password=Pa55w0rd;"
   },
-  "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e"
+  "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e",
+  "Api": {
+    "AuthHost": "http://localhost:8080/api/auth/"
+  }
 }
