--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,12 @@
 version: '3.8'
 
 services:
+
   postgres:
-    image: postgres:14.5
+    build:
+      context: .
+      dockerfile: ./Database/Dockerfile
     restart: always
-    environment:
-      POSTGRES_PASSWORD: 'Pa55w0rd'
-    volumes:
-      - ./Database/postgres_init.sql:/docker-entrypoint-initdb.d/postgres_init.sql
 
   auth:
     image: ghcr.io/muscle-up-app/auth
