Validate User existence when creation relationship (#64)
* does user exists

* consume auth api

* fixes

Co-authored-by: Mikołaj Macioszczyk <macioszczyk@vialutions.com>

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -50,7 +50,7 @@ services:
       - ASPNETCORE_ENVIRONMENT
       - JwtSecret
       - ConnectionStrings:DefaultConnection=Server=postgres;Port=5432;Database=FitnessClubs;User Id=postgres;Password=Pa55w0rd;
-      - Api:Auth=http://auth/
+      - Api:AuthHost=http://auth/
     depends_on:
       - postgres
 
