--- a/FitnessClubs/FitnessClubs.API/appsettings.Development.json
+++ b/FitnessClubs/FitnessClubs.API/appsettings.Development.json
@@ -11,5 +11,26 @@
   "JwtSecret": "Uj`)JA6[(|Ea.*+2@XK`l5_d^dg:%WW[Eq<Hq|+[V;{F!SJE&7e[HP,x5gEr*s%e",
   "Api": {
     "AuthHost": "http://localhost:8080/api/auth/"
+  },
+  "Broker": {
+    "Host": {
+      "HostName": "localhost",
+      "Port": "5672",
+      "UserName": "muscleUp",
+      "Password": "Pa55w0rd"
+    },
+    "Exchange": {
+      "Type": "direct",
+      "Durable": true,
+      "AutoDelete": false,
+      "DeadLetterExchange": "default.dlx.exchange",
+      "RequeueFailedMessages": true,
+      "Queues": [
+        {
+          "Name": "memberships",
+          "RoutingKeys": [ "memberships" ]
+        }
+      ]
+    }
   }
 }
