--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -13,6 +13,18 @@ services:
     volumes:
       - ./Database/postgres_init.sql:/docker-entrypoint-initdb.d/postgres_init.sql
 
+  broker:
+    container_name: "broker"
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=muscleUp
+      - RABBITMQ_DEFAULT_PASS=Pa55w0rd
+    ports:
+      # AMQP protocol port
+      - '5672:5672'
+      # HTTP management UI
+      - '15672:15672'
+
   auth:
     build: 
       context: .
