Entries additional data (#93)
* isValid property

* move authService

* add httpAuthService

* get member by id

* throw error on auth service failure

* add validity date

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -49,6 +49,7 @@ services:
       - JwtSecret
       - ConnectionStrings:DefaultConnection=Server=postgres;Port=5432;Database=Carnets;User Id=postgres;Password=Pa55w0rd;
       - Api:FitnessClubHost=http://fitnessclubs/
+      - Api:AuthHost=http://auth/
       - Broker:Host:HostName=broker
     depends_on:
       - postgres
