--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       ASPNETCORE_ENVIRONMENT: 'Development'
       ConnectionStrings__DefaultConnection: 'Server=postgres;Port=5432;Database=Carnets;User Id=postgres;Password=Pa55w0rd;'
       Api__FitnessClubHost: 'http://fitnessclubs/'
+      Api__AuthHost: 'http://auth/'
       Broker__Host__HostName: 'broker'
     depends_on:
       - postgres
